fixed some layout issues on contactPage

--- a/contactPage.css
+++ b/contactPage.css
@@ -6,14 +6,14 @@ html, body{
 .homePage-background{
     position: relative;
     height: 100vh;
-    overflow: hidden;
+    
     display: flex;
     align-items: flex-end;
     justify-content: flex-start;
     color: #fff;
     margin: 0;
     padding: 0;
-    top: -160px;
+    top: 0;
 }
 
 .bg-image{
@@ -24,6 +24,7 @@ html, body{
     bottom: 0;
     width: 100%;
     height: 80%;
+    background-size: cover;
     background: url("images/massimo-adami-zEy5QBUBmRE-unsplash\ \(1\).jpg")center center/cover no-repeat;
     transform: scale(1);
     transform-origin: center center;
@@ -37,10 +38,27 @@ main {
     
 }
 
+/*contact info layout*/
+.contact-layout{
+    width: 100%;
+    max-width: 1400px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+    padding-inline: 1.5rem;
+}
+
+.page-info{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 3rem;
+}
+
 /*Contact Page heading*/
 .contact-heading{
     opacity: 0;
-    transform: translateY(140px);
     font-size: 140px;
     font-weight: bold;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -49,8 +67,8 @@ main {
     -webkit-text-fill-color: transparent;
     -webkit-text-stroke: 1px white;
     display: inline-block;
-    margin-left: 40px;
-    margin-bottom: 72px;
+    margin-left: 100px;
+    margin-top: 150px;
     z-index: 1;
 }
 
@@ -61,7 +79,7 @@ main {
     display: flex;
     top: 50%;
     left: 50%;
-    transform: translate(35%, -7%);
+    margin-top: 40px;
 }
 
 #map{
@@ -81,7 +99,7 @@ main {
     background-color: black;
     top: 50%;
     left: 50%;
-    transform: translate(228%, -200%);
+    margin-top: 40px;
 }
 
 .address-section h2{
@@ -135,8 +153,7 @@ main {
     width: 80rem;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
     background-color: rgb(227, 215, 199);
-    margin-left: 200px;
-    margin-top: -310px;
+    margin-top: 40px;
     padding: 30px 40px;
 }
 
@@ -270,7 +287,7 @@ main {
 .klava-signature{
     height: 200px;
     width: 600px;
-    margin-left: 500px;
+    margin-left: 340px;
     margin-top: 140px;
 }
 
